--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.11.7",
     "next": "13.1.6",
     "react": "18.2.0",
+    "react-color": "^2.19.3",
     "react-device-detect": "^2.2.2",
     "react-dom": "18.2.0"
   },
@@ -23,6 +24,7 @@
     "@next/eslint-plugin-next": "^13.1.6",
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.27",
+    "@types/react-color": "^3.0.6",
     "@types/react-dom": "^18.0.10",
     "@typescript-eslint/eslint-plugin": "^5.50.0",
     "@typescript-eslint/parser": "^5.50.0",
